<resources>
    <string name="app_name">ShopPin Mate</string>
    <string name="title_activity_shop_list">Shoppin Mate</string>
    <string name="title_activity_edit_shop">Edit Shop</string>
    <string name="shop_name">Name</string>
    <string name="shop_address">Address</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="shop_url">Web page</string>
    <string name="shop_active">Active</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="holidays">Holidays</string>
    <string name="notes">Notes</string>
    <string name="menu_done">Done</string>
    <string name="menu_cancel">Cancel</string>
    <string name="closed">Closed</string>
    <string name="choose_shop_size">[Choose shop size…]</string>
    <string name="openingHoursHint">Use ranges separated by comma, for example
        <i>8:00-11:30, 12:30-17:00</i>. Leave blank for Closed.
    </string>
    <string name="error_shop_name_empty">Shop name cannot be empty</string>
    <string name="question_copy_opening_hours">Copy opening hours for Monday
        to all days?</string>
    <string name="question_delete_shop">Do you really want to delete the shop?</string>
    <string name="add_new_shop">Add new Shop</string>
    <string name="search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="shops_map">Shops</string>

    <string-array name="shop_size_array">
        <item>Small (local grocery Store)</item>
        <item>Medium (multiple checkouts)</item>
        <item>Large (large shopping center)</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string-array name="pref_closing_soon_values">
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>

    <string name="pref_header_about">About</string>
    <string name="pref_header_map">Map</string>
    <string name="pref_title_send_feedback">Send feedback</string>
    <string name="pref_text_application_version">ShopPin Mate version 1.0.\nStepan Rezek, 2015.</string>
    <string name="feedback_mail_subject">Application Feedback</string>
    <string name="feedback_mail_body">I would like to give you a feedback about the application:</string>
    <string name="choose_mail_client">Select email application</string>
    <string name="pref_title_enable_shops_clustering">Enable Shops Clustering</string>
    <string name="pref_description_enable_shops_clustering">Group multiple shops to a single circle (Cluster) when they are too close to each other in a particular zoom level.</string>
    <string name="pref_title_minimum_cluster_size">Minimal Cluster Size</string>
    <string name="pref_description_minimum_cluster_size">Minimal number of shops to be considered as cluster.</string>
    <string name="pref_title_closing_soon">Closing soon minutes</string>
    <string name="pref_description_closing_soon">The number of minutes before shop\'s icon will turn orange</string>
    <string name="pref_description_shops_clustering_enabled">When shops are too close to each other at some level of zoom, they are clustered into a single big circle.</string>
    <string name="pref_description_shops_clustering_disabled">Shops will not be clustered at any given zoom level.</string>
    <string name="welcomeOverlayTitle">Welcome to ShopPin Mate!</string>
    <string name="welcomeOverlayText">Long tap anywhere on the map to add a new shop and edit its opening hours.</string>
</resources>
