<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.shopmy.shopmy.EditShopActivity"
    tools:showIn="@layout/activity_edit_shop">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="50dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:id="@+id/form_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/shopNameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/shop_name" />

                <EditText
                    android:id="@+id/shopAddressEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/shop_address"
                    android:inputType="textPostalAddress" />

                <EditText
                    android:id="@+id/shopWebPageEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/shop_url"
                    android:inputType="textEmailAddress" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/shop_size_array"
                    android:focusable="true" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:enabled="true"
                    android:text="@string/shop_active" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/monday"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/openingHoursMondayView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Closed"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <Button
                            android:id="@+id/buttonEditOpeningHoursMonday"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/edit_hours_button_size"
                            android:text="Edit" />

                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tuesday"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/openingHoursTuesdayView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Closed"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <Button
                            android:id="@+id/buttonEditOpeningHoursTuesday"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/edit_hours_button_size"
                            android:text="Edit" />

                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wednesday"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/openingHoursWednesdayView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Closed"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <Button
                            android:id="@+id/buttonEditOpeningHoursWednesday"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/edit_hours_button_size"
                            android:text="Edit" />

                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thursday"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/openingHoursThursdayView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Closed"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <Button
                            android:id="@+id/buttonEditOpeningHoursThursday"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/edit_hours_button_size"
                            android:text="Edit" />

                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/friday"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/openingHoursFridayView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Closed"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <Button
                            android:id="@+id/buttonEditOpeningHoursFriday"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/edit_hours_button_size"
                            android:text="Edit" />

                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/saturday"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/openingHoursSaturdayView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Closed"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <Button
                            android:id="@+id/buttonEditOpeningHoursSaturay"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/edit_hours_button_size"
                            android:text="Edit" />

                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sunday"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/openingHoursSundayView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Closed"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <Button
                            android:id="@+id/buttonEditOpeningHoursSunday"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/edit_hours_button_size"
                            android:text="Edit" />

                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/holidays"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/openingHoursHolidaysView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Closed"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <Button
                            android:id="@+id/buttonEditOpeningHoursHolidays"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/edit_hours_button_size"
                            android:text="Edit" />

                    </TableRow>

                </TableLayout>

                <!--<EditText-->
                    <!--android:id="@+id/shopNotesEdit"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:ems="10"-->
                    <!--android:hint="@string/notes"-->
                    <!--android:inputType="textMultiLine" />-->
            </LinearLayout>


        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu_done" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu_cancel" />
    </LinearLayout>

</RelativeLayout>
